scrollbar fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,11 +22,23 @@ body {
   color: #173d33;
 }
 
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   font-family: var(--font-mono);
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+.body-no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 a {
